<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde1"
    tools:context=".Fecha_numero">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/dia"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/mes"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/año"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/ent_s1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/background_box"
                        android:ems="5"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/ent_s2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/background_box"
                        android:ems="5"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/ent_s3"
                        android:layout_width="90dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/background_box"
                        android:ems="5"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </TableRow>

            </TableLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-5dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.robinhood.ticker.TickerView
            android:id="@+id/sueno1"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_box_color"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            app:ticker_textSize="30sp" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/sueno2"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_box_color_2"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            app:ticker_textSize="30sp" />

        <com.robinhood.ticker.TickerView
            android:id="@+id/sueno3"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_box_color_3"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            app:ticker_textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sueno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:backgroundTint="@color/verde2"
            android:text="Generar"
            android:textSize="36sp"
            app:cornerRadius="10dp" />

    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
                app:adUnitId="@string/anunciobanner"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>

