<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-100dp"
        android:background="@color/verde1"
        android:gravity="center"
        android:orientation="vertical"
        android:scaleType="fitXY">


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie1"
            android:layout_width="2500px"
            android:layout_height="2200px"
            android:layout_gravity="center"
            app:lottie_autoPlay="false"
            app:lottie_fileName="pyramid2.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-200dp"
            android:visibility="visible"
            app:lottie_autoPlay="false"
            app:lottie_fileName="coin.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.robinhood.ticker.TickerView
            android:id="@+id/txtpf2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="-65dp"
            android:background="@drawable/shamrock"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:ticker_textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="250dp"
            android:gravity="center"
            android:text="@string/soñarcon"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="370dp"
            android:gravity="center"
            android:text="@string/palabra"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.robinhood.ticker.TickerView
            android:id="@+id/txtpf1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="370dp"
            android:background="@drawable/circulo"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:ticker_textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.robinhood.ticker.TickerView
            android:id="@+id/txtpf3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="370dp"
            android:background="@drawable/circulo"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:ticker_textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.robinhood.ticker.TickerView
            android:id="@+id/txtpf4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="138dp"
            android:background="@drawable/circulo"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:ticker_textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sueno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="290dp"
            android:backgroundTint="@color/verde2"
            android:text="Generar"
            android:textSize="40sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:minHeight="90dp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/anunciobanner"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>

